// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot BookmarkButton isBookmarked=false 1`] = `
<IconButton
  disableTouchRipple={false}
  disabled={false}
  iconStyle={
    Object {
      "height": 18,
      "width": 18,
    }
  }
  onClick={[MockFunction]}
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
  tooltipPosition="bottom-center"
  touch={false}
>
  <ActionFavorite
    color="#777"
    hoverColor="#b94343"
  />
</IconButton>
`;

exports[`snapshot BookmarkButton isBookmarked=true 1`] = `
<IconButton
  disableTouchRipple={false}
  disabled={false}
  iconStyle={
    Object {
      "height": 18,
      "width": 18,
    }
  }
  onClick={[MockFunction]}
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
  tooltipPosition="bottom-center"
  touch={false}
>
  <ActionFavorite
    color="#b94343"
    hoverColor="#b94343"
  />
</IconButton>
`;
